syntax = 'proto3';

package inventory.v1;

option go_package = "github.com/materials-resources/s_prophet/internal/core/model/inventory_v1alpha0";

service InventoryService {
  rpc GetProductStock(GetProductStockRequest) returns (GetProductStockResponse);
  //  rpc AddSupplier(AddSupplierRequest) returns (AddSupplierResponse);
  //  rpc DeleteSupplier(DeleteSupplierRequest) returns (DeleteSupplierResponse);

  // GetReceiptByID returns details for a inventory receipt given an identifier.
  rpc GetReceiptByID(GetReceiptByIDRequest) returns (GetReceiptByIDResponse);
}

message AddSupplierRequest {
  int32 serial_id = 1;
  int32 supplier_id = 2;
  int32 division_id = 3;
  int32 lead_time = 4;
  float list_price = 5;
  float cost = 6;

  string supplier_part_no = 7;
}

message GetProductStockRequest {
  repeated int32 product_uid = 1;
}
message GetProductStockResponse {
  message ProductStock {
    int32 product_uid = 1;
    double quantity_available = 2;
  }
  repeated ProductStock product_stock = 1;
}
message AddSupplierResponse {}

message DeleteSupplierRequest {}

message DeleteSupplierResponse {}

message GetReceiptByIDRequest {
  double id = 1;
}
message GetReceiptByIDResponse {
  message Item {
    message Order {
      //Unique ID of order
      string id = 1;
      //Customer Name
      string customer_name = 2;
      //Quantity of product allocated
      double allocated_quantity = 3;
      //Unit associated with allocated_quantity
      string allocated_unit = 4;
    }
    //Unique ID of product
    int32 product_uid = 1;
    //Primary bin where product is stored
    string product_primary_bin = 2;
    //Quantity of product received
    double received_quantity = 4;
    //Unit associated with received_quantity
    string received_unit = 5;
    //Orders that were allocated to
    repeated string allocated_orders = 6;
  }
  //Unique ID of receipt
  double id = 1;
  //Items that were received for this receipt
  repeated Item items = 2;
}
